--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@ body {
     min-height: 70%;
 }
 
-
-    
+.jumbotron {
+    background-color: transparent;
+    font-family: 'Carter One', cursive;
 }
+
+#Wins {
+    color: white;
+}
+
+#Losses {
+    color: white;
+}
+    
